# blosc-rs

./: .gitignore  .gitmodules  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
blosc-rs/: Cargo.toml  README.md  build.rs
blosc-rs-sys/: Cargo.toml  README.md  build.rs
blosc-rs-sys/c/: bindings.h
blosc-rs-sys/src/: lib.rs
blosc-rs/src/: lib.rs
